# DenonAVRStatus-IDF

./: .gitignore  CMakeLists.txt  LICENSE  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_events.h  main.cpp
main/config/: config_manager.cpp  config_manager.h
main/hardware/display/: display.cpp  display.h
main/hardware/uart/: command_processor.h  denon_avr.cpp  denon_avr.h
main/logging/: logging_tags.h
main/util/: cores.h
main/util/timer/: timer.h
